# jnxlogcpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/appender/: appenderinfo.hpp  baseappender.cpp  baseappender.hpp  fileappender.cpp  fileappender.hpp  iappender.hpp  ioappender.cpp  ioappender.hpp
src/logger/: CMakeLists.txt  configuration.cpp  configuration.hpp  logger.cpp  logger.hpp
tests/: run_tests  test_configuration.cpp  test_example.cpp  test_logemit.cpp  test_logspawn.cpp
